# junior-ai-engineer-test

./: .gitignore  README.md  pyproject.toml
api_description_optimizer/: optimize_description.py  optimize_description_prompt.txt  test_api.py
ecommerce_returns/: return_request.py  return_request_prompt.txt
prompt-engineering/: generate_quick_replies.py  quick_replies_prompt.txt  test_data.py  test_quick_replies.py  test_results.json
